# fusion-ekf

./: .gitignore  CMakeLists.txt  README.md
A-UPDATED-FUSIONEKF/: .gitignore  CMakeLists.txt  ReadMe.MD  cmakepatch.txt  mac-install.sh  run.sh
A-UPDATED-FUSIONEKF/src/: datapoint.cpp  datapoint.h  fusionekf.cpp  fusionekf.h  json.hpp  kalmanfilter.cpp  kalmanfilter.h  main.cpp  tools.cpp  tools.h
data/: out-1-B.txt  out-1-C.txt  out-1.txt  out-2-B.txt  out-2-C.txt  out-2-D.txt  out-2.txt
docs/: input_output_file_format.txt  settings_results-2.txt  settings_results.txt  variances.txt
headers/: datapoint.h  fusionekf.h  kalmanfilter.h  tools.h  usagecheck.h
src/: datapoint.cpp  fusionekf.cpp  kalmanfilter.cpp  main.cpp  tools.cpp  usagecheck.cpp
